[package]
name = "seraphite"
description = "Blazlingly fast dotfile manager!"
license = "MIT OR Apache-2.0"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive"] }
clap_complete = "4.4.0"
git2 = "0.18.0"
owo-colors = "3.5.0"
termimad = "0.25.2"
which = "3.1"
